# Anaphase-Helix

./: .env  .env.example  .gitignore  ARCHITECTURE.md  README.md  anaphase_brainstem_worker.py  arbiter_loop.py  archive_civilization.sh  cleanup.sh  cli.py  cli_queue.py  debug_imports.py  debug_tuck_payload.py  discover_models.py  evolution_briefing.md  generate_status.py  helix_console.py  law_alignment_check.py  pre_flight_check.py  pyproject.toml  requirements.txt  run_evolution.py  sync_helix.sh  sync_legacy.sh  test_surgeon.py  test_tuck_worker.py  test_ward.py  the_watchmaker.py  worker.py
ana/: cli.py
config/: gene_lock.md  system_prompt.md  tools.yaml
core/: chronicler.py  config.py  dashboard.py  engine.py  isolation_ward.py  librarian.py  lifecycle.py  lifeline.py  llm_client.py  loop_engine.py  memory.py  memory.py.bak  pareto_arbiter.py  redis_cortex.py  refiner.py  sandbox.py  scout.py  security_gate.py  skill_registry.py  surgeon_toolkit.py  tavily_organ.py  toolkit.py  tuck_gateway.py  ward.py  watchmaker.py
global_mind/: evolution_notes.md  evolution_notes.md.bak  experience_lib.md  helix_notepad.md  library.json  lifeline.json  meta_cognition.md  meta_cognition.md.bak  metrics.json  pareto_best.json  patch_global.json  soud.md  soul.md  training.json
legacy_v1_backup_1773853304/: memory.jsonl  mission.json  soul.md  training.json
tests/: conftest.py  test_agent_loop.py  test_harness.py  test_registry.py  test_synapse.py
workspace_v1_backup_1773853304/: core_template.py  hello.py  safe_json_handler.py  safe_template.py  test_survival_v1.py
(+49 files in other folders)
