[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-ana"
version = "0.1.0"
description = "Anaphase execution layer of Helix ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "ruff>=0.11",
]

[project.scripts]
ana = "ana.cli:cli"

[tool.setuptools]
packages = ["ana", "config"]

[tool.ruff]
line-length = 100
target-version = "py312"
